--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,9 @@
 * {
-	margin: 0
-	padding: 0
-	outline: none
+	margin: 0;
+	padding: 0;
+	outline: none;
 }
 
 html, body {
-	height: 100%
+	height: 100%;
 }
