--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,11 +8,15 @@ html, body {
 	height: 100%;
 }
 
+$font-stack: Helvetica, sans-serif;
+$primary-color: #f0f0f0;
+$secondary-color: #f5f5f5;
+
 body {
-	background: #f0f0f0;
+	font: 100% $font-stack;
+	background: $primary-color;
 	.hero {
-		background: #f5f5f5;
+		background: $secondary-color;
 		text-align: center;
 	}
 }
-
