--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,11 +2,12 @@
   margin: 0;
   padding: 0;
   outline: none;
+  text-decoration: none;
 }
 
-html,
 body {
-  height: 100%;
+  width: 100%;
+  min-height: 100vh;
 }
 
 body {
@@ -17,5 +18,25 @@ body {
 body .hero {
   background: #f5f5f5;
   text-align: center;
+  transform: rotate(10deg);
+}
+
+header a b span {
+  z-index: 10;
+}
+
+p,
+h1 {
+  border: 1px solid #ccc;
+  padding: 10px;
+  color: #333;
+}
+
+h1 {
+  background: #f5f5f5;
+}
+
+p {
+  background: #f9f9f9;
 }
 
