--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,30 @@
+@charset "UTF-8";
+
+body .hero {
+  background: #f5f5f5;
+  text-align: center;
+  transform: rotate(10deg);
+  width: 80%;
+  margin-left: 100px;
+}
+
+p,
+h5 {
+  border: 1px solid #ccc;
+  padding: 10px;
+  color: #333;
+}
+
+h5 {
+  background: #f5f5f5;
+}
+
+p {
+  background: #f9f9f9;
+}
+
+/* НАЧАЛО */
+
 * {
   margin: 0;
   padding: 0;
@@ -5,38 +32,930 @@
   text-decoration: none;
 }
 
+a,
+*:hover {
+  transition: all 0.6s ease;
+}
+
+textarea {
+  padding: 5px;
+}
+
 body {
   width: 100%;
   min-height: 100vh;
+  float: left;
+  font-family: "Nunito", sans-serif;
+  background-color: #acacb7;
+  -webkit-display: flex;
+  display: flex;
+  flex-direction: column;
+  /* Перенос длинного текста */
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+  word-wrap: break-word;
+  /* ----------------------- */
 }
 
-body {
-  font: 100% Helvetica, sans-serif;
-  background: #f0f0f0;
+#wrapper {
+  float: left;
+  flex-grow: 1;
 }
 
-body .hero {
-  background: #f5f5f5;
-  text-align: center;
-  transform: rotate(10deg);
+@media (max-width: 1299px) {
+  #wrapper {
+    width: 86%;
+    margin-left: 7%;
+  }
 }
 
-header a b span {
+@media (min-width: 1300px) {
+  #wrapper {
+    width: 70%;
+    margin-left: 15%;
+  }
+}
+
+/* -------------------------------
+		Выделение текста
+----------------------------------*/
+
+::-moz-selection {
+  background: #6accd7;
+  color: #fff;
+}
+
+::selection {
+  background: #6accd7;
+  color: #fff;
+}
+
+::-moz-selection {
+  background: #6accd7;
+  color: #fff;
+}
+
+/* -------------------------------
+		Шапка сайта
+----------------------------------*/
+
+header {
+  background-color: #14112d;
+}
+
+header #logo {
+  text-shadow: 2px 2px 4px red, -2px 2px 4px red, 2px -2px 4px red, -2px -2px 4px red;
+  /*font-family: Times New Roman, sans-serif;*/
+  color: #ffeb3b;
+  float: left;
+  width: 25%;
+  padding-top: 10px;
+}
+
+#lk_menu span#contact a,
+.lk_topmenu {
+  margin: -10px 0px 5px 10px;
+}
+
+@media (min-width: 1300px) {
+  header a#logo {
+    font-size: 2.5em;
+    margin: 8px 10px 7px 15%;
+  }
+
+  #lk_menu span#contact a,
+  .lk_topmenu {
+    margin-right: 15%;
+  }
+}
+
+@media (max-width: 1299px) {
+  header a#logo {
+    font-size: 2em;
+    margin: 8px 10px 7px 7%;
+  }
+
+  #lk_menu span#contact a,
+  .lk_topmenu {
+    margin-right: 7%;
+  }
+}
+
+#lk_menu span#contact a {
+  text-shadow: 1px 1px 2px #e0e0e0, 0 0 2em white;
+  color: #4c00a4;
+  float: right;
+  font-size: 1.4em;
+}
+
+#lk_menu span#contact a:hover {
+  color: #e0e0e0;
+}
+
+#lk_menu {
+  background-color: #14112d;
+  margin-top: -1px;
+}
+
+#lk_menu span#contact,
+.lk_topmenu_li a label#client {
+  margin-top: -20px;
+}
+
+.lk_topmenu {
+  font-size: 1.2em;
+}
+
+.lk_submenu {
+  list-style: none;
+  margin: 0;
+  padding: 10px 20px;
+  position: absolute;
+  top: 100%;
+  right: 0;
   z-index: 10;
+  transition: 0.5s ease-in-out;
+  display: none;
+  background: #e6e6e6;
+  border: 1px solid #8c8c8c;
+  border-radius: 5px;
 }
 
-p,
-h1 {
-  border: 1px solid #ccc;
-  padding: 10px;
-  color: #333;
+.lk_topmenu_li {
+  display: inline-block;
+  /*float: right;*/
+  position: relative;
+  padding: 0;
 }
 
-h1 {
-  background: #f5f5f5;
+.lk_topmenu a {
+  display: block;
+  text-decoration: none;
+  outline: none;
+  transition: 0.5s linear;
 }
 
-p {
-  background: #f9f9f9;
+.lk_submenu li a {
+  border: 1px solid green;
+  border-radius: 5px;
+  /*color: #8c8c8c;*/
+  color: green;
+  margin: 7px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  float: left;
+  width: 150px;
+  text-align: center;
+}
+
+.lk_submenu li a:hover {
+  text-shadow: 1px 1px 3px white, -1px 1px 3px white, 1px -1px 3px white, -1px -1px 3px white;
+  color: red;
+}
+
+.lk_topmenu li:hover .lk_submenu {
+  display: block;
+}
+
+#client {
+  float: right;
+  color: white;
+  border: 4px double white;
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  margin-bottom: 5px;
+}
+
+#client:hover {
+  text-shadow: 2px 2px 5px red, -2px 2px 5px red, 2px -2px 5px red, -2px -2px 5px red;
+  border: 4px double red;
+  border-radius: 5px;
+  box-shadow: 0 0 20px red;
+  cursor: pointer;
+}
+
+@media (max-width: 699px) {
+  nav {
+    width: 90%;
+    float: left;
+    background-color: #ffffff;
+    padding: 0 5% 0.7% 5%;
+  }
+}
+
+@media (max-width: 1299px) and (min-width: 700px) {
+  nav {
+    width: 86%;
+    float: left;
+    background-color: #ffffff;
+    padding: 0 7% 0.7% 7%;
+  }
+}
+
+@media (min-width: 1300px) {
+  nav {
+    width: 70%;
+    float: left;
+    background-color: #ffffff;
+    padding: 0 15% 0.7% 15%;
+  }
+}
+
+@media (min-width: 837px) {
+  nav a,
+  nav#fixed a {
+    border-top: 5px solid rgba(255, 255, 255, 0);
+  }
+}
+
+nav a,
+nav#fixed a {
+  padding: 0.5% 1% 0 1%;
+  float: left;
+  font-family: Times New Roman, sans-serif;
+  font-size: 1.4em;
+  color: #686869;
+}
+
+nav#fixed {
+  position: fixed;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.87);
+  border-color: rgba(224, 224, 224, 0.87);
+  transition: all 0.6s ease;
+}
+
+nav#fixed:hover {
+  background-color: #fff;
+}
+
+nav a:hover,
+nav#fixed a:hover {
+  border-top: 5px solid #ffeb3b;
+  color: #8c8c8c;
+}
+
+@media (max-width: 699px) {
+  .line-menu {
+    display: none;
+  }
+}
+
+@media (min-width: 700px) {
+  .topmenu {
+    display: none;
+  }
+}
+
+.line-menu a {
+  width: calc(90% / 5);
+  text-align: center;
+}
+
+.submenu {
+  list-style: none;
+  margin: 0;
+  padding: 20px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 10;
+  transition: 0.5s ease-in-out;
+  display: none;
+  /*background: white;*/
+  background: #e6e6e6;
+  border: 1px solid #8c8c8c;
+  border-radius: 5px;
+}
+
+.topmenu_li {
+  display: inline-block;
+  margin-right: 20px;
+  /*float: left;*/
+  position: relative;
+}
+
+.topmenu_li:last-child {
+  margin-right: 0;
+}
+
+.topmenu a {
+  display: block;
+  padding: 10px 0;
+  text-decoration: none;
+  outline: none;
+  transition: 0.5s linear;
+}
+
+.submenu li a {
+  border: 1px solid blue;
+  border-radius: 5px;
+  padding: 10px 15px;
+  /*color: #8c8c8c;	*/
+  color: blue;
+  margin: 5px;
+  float: left;
+}
+
+.topmenu_li:hover .submenu {
+  display: block;
+}
+
+.fa {
+  font-family: "FontAwesome";
+  color: inherit;
+  padding-left: 10px;
+}
+
+#slideMenu {
+  float: left;
+  color: rgba(255, 255, 255, 0);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* --------------------------------
+		Верхняя часть контента
+-----------------------------------*/
+
+#topColPhoto {
+  /*	background-color: rgba(255,255,255);*/
+  background-color: #14112d;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  float: left;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#topColPhoto img {
+  width: 100%;
+  float: left;
+}
+
+#topColText {
+  /*	background-color: rgba(255,255,255);*/
+  background-color: #14112d;
+  border-radius: 5px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  float: left;
+  margin-bottom: 20px;
+}
+
+#topColText h1 {
+  /*	font-family: 'RussianSuvenir';	*/
+  /*	color: blue;*/
+  /*rgba(121,50,218);*/
+  color: white;
+  width: 100%;
+  text-align: center;
+  text-shadow: 1px 1px 2px grey, 0 0 3em #ececee;
+}
+
+@media (min-width: 1300px) {
+  #topColPhoto {
+    width: 200px;
+  }
+
+  #topColText {
+    width: calc(100% - 220px);
+    /* 20px маргин райт)*/
+    height: 200px;
+  }
+
+  #topColText h1 {
+    font-size: 3em;
+    margin-top: 76px;
+  }
+}
+
+@media (max-width: 1299px) and (min-width: 1000px) {
+  #topColPhoto {
+    width: 180px;
+  }
+
+  #topColText {
+    width: calc(100% - 200px);
+    height: 180px;
+  }
+
+  #topColText h1 {
+    font-size: 2.5em;
+    margin-top: 71px;
+  }
+}
+
+@media (max-width: 999px) and (min-width: 800px) {
+  #topColPhoto {
+    width: 160px;
+  }
+
+  #topColText {
+    width: calc(100% - 180px);
+    height: 160px;
+  }
+
+  #topColText h1 {
+    font-size: 2em;
+    margin-top: 60px;
+  }
+}
+
+@media (max-width: 799px) and (min-width: 700px) {
+  #topColPhoto {
+    width: 140px;
+  }
+
+  #topColText {
+    width: calc(100% - 160px);
+    height: 140px;
+  }
+
+  #topColText h1 {
+    font-size: 1.8em;
+    margin-top: 53px;
+  }
+}
+
+@media (max-width: 699px) and (min-width: 600px) {
+  #topColPhoto {
+    width: 120px;
+  }
+
+  #topColText {
+    width: calc(100% - 140px);
+    height: 120px;
+  }
+
+  #topColText h1 {
+    font-size: 1.7em;
+    margin-top: 45px;
+  }
+}
+
+@media (max-width: 599px) and (min-width: 540px) {
+  #topColPhoto {
+    width: 100px;
+  }
+
+  #topColText {
+    width: calc(100% - 120px);
+    height: 100px;
+  }
+
+  #topColText h1 {
+    font-size: 1.6em;
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 539px) and (min-width: 490px) {
+  #topColPhoto {
+    width: 100px;
+  }
+
+  #topColText {
+    width: calc(100% - 120px);
+    height: 100px;
+  }
+
+  #topColText h1 {
+    font-size: 1.4em;
+    margin-top: 38px;
+  }
+}
+
+@media (max-width: 489px) and (min-width: 440px) {
+  #topColPhoto {
+    width: 80px;
+  }
+
+  #topColText {
+    width: calc(100% - 100px);
+    height: 80px;
+  }
+
+  #topColText h1 {
+    font-size: 1.3em;
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 439px) and (min-width: 390px) {
+  #topColPhoto {
+    width: 70px;
+  }
+
+  #topColText {
+    width: calc(100% - 90px);
+    height: 70px;
+  }
+
+  #topColText h1 {
+    font-size: 1.1em;
+    margin-top: 25px;
+  }
+}
+
+@media (max-width: 389px) and (min-width: 340px) {
+  #topColPhoto {
+    width: 60px;
+  }
+
+  #topColText {
+    width: calc(100% - 80px);
+    height: 60px;
+  }
+
+  #topColText h1 {
+    font-size: 1em;
+    margin-top: 22px;
+  }
+}
+
+@media (max-width: 339px) and (min-width: 300px) {
+  #topColPhoto {
+    width: 50px;
+  }
+
+  #topColText {
+    width: calc(100% - 70px);
+    height: 50px;
+  }
+
+  #topColText h1 {
+    font-size: 0.8em;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 299px) {
+  #topColPhoto {
+    width: 45px;
+  }
+
+  #topColText {
+    width: calc(100% - 65px);
+    height: 45px;
+  }
+
+  #topColText h1 {
+    font-size: 0.6em;
+    margin-top: 18px;
+  }
+}
+
+/* -------------------------------
+		Левая часть сайта
+----------------------------------*/
+
+#leftCol {
+  background-color: #acacb7;
+}
+
+#leftCol #form_nazad {
+  width: 40%;
+}
+
+#leftCol #form_dalee {
+  width: 40%;
+}
+
+#support div,
+#o_prizmarket div {
+  width: 90%;
+  margin: 5%;
+  float: left;
+}
+
+#support h1 b,
+#o_prizmarket h1 b {
+  color: blue;
+}
+
+#support h3 b {
+  color: green;
+}
+
+#o_prizmarket h3 b {
+  color: red;
+}
+
+.button {
+  padding: 3px 10px 3px 10px;
+  background-color: #ffe;
+  color: #930;
+}
+
+.button:hover {
+  background-color: grey;
+  color: white;
+  border: 2px solid #f8d881;
+  cursor: pointer;
+}
+
+#leftCol article h4 {
+  text-align: center;
+  color: #acacb7;
+  font-size: 1.2em;
+  font-family: Times New Roman, sans-serif;
+  width: 86%;
+  margin: 2% 7%;
+}
+
+#leftCol p label {
+  font-size: 1.2em;
+}
+
+#leftCol article {
+  padding-bottom: 20px;
+}
+
+#warning {
+  color: red;
+  text-align: center;
+}
+
+@media (min-width: 700px) {
+  #wrapper #leftCol {
+    width: 69%;
+    margin-right: 3%;
+    float: left;
+  }
+}
+
+@media (max-width: 699px) {
+  #wrapper #leftCol {
+    width: 100%;
+    float: left;
+    margin-bottom: 20px;
+  }
+}
+
+#leftCol article {
+  width: 100%;
+  background-color: #14112d;
+  margin-bottom: 20px;
+  float: left;
+  border-radius: 5px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#leftCol article:last-child {
+  margin-bottom: 0;
+}
+
+/*----------------------------------*/
+
+/* В личном кабинете заявки клиента */
+
+/*----------------------------------*/
+
+#leftCol #lk_z #zayavki a img {
+  width: 50%;
+  margin: 10px;
+}
+
+#leftCol #lk_z #zayavki h4 {
+  font-family: Times New Roman, sans-serif;
+  color: #acacb7;
+}
+
+#leftCol #lk_z #zayavki {
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
+#leftCol #lk_z {
+  padding-bottom: 0px;
+}
+
+@media (min-width: 800px) {
+  #leftCol #lk_z #zayavki h4 {
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 799px) and (min-width: 640px) {
+  #leftCol #lk_z #zayavki h4 {
+    font-size: 0.9em;
+  }
+}
+
+@media (max-width: 639px) and (min-width: 350px) {
+  #leftCol #lk_z #zayavki h4 {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 349px) and (min-width: 311px) {
+  #leftCol #lk_z #zayavki h4 {
+    font-size: 0.7em;
+  }
+}
+
+@media (max-width: 310px) {
+  #leftCol #lk_z #zayavki h4 {
+    font-size: 0.6em;
+  }
+}
+
+/*----------------------------------*/
+
+#leftCol article img {
+  width: 100%;
+  float: left;
+  margin-bottom: 10px;
+}
+
+#leftCol article h2 {
+  font-size: 1em;
+  color: #acacb7;
+  width: 90%;
+  margin-left: 5%;
+  float: left;
+}
+
+#leftCol article p {
+  font-size: 1em;
+  font-family: Times New Roman, sans-serif;
+  color: #acacb7;
+  width: 86%;
+  margin: 2% 7%;
+  float: left;
+}
+
+#leftCol article a {
+  color: #ffeb3b;
+  font-size: 1.2em;
+}
+
+#leftCol article h4 a {
+  font-size: 1em;
+}
+
+#leftCol article a:hover {
+  color: #647f82;
+}
+
+#leftCol article span {
+  float: right;
+  color: #7c7c7c;
+}
+
+/* -------------------------------
+		Правая часть сайта
+----------------------------------*/
+
+@media (min-width: 700px) {
+  #wrapper #rightCol {
+    width: 28%;
+    float: left;
+  }
+}
+
+@media (max-width: 699px) {
+  #wrapper #rightCol {
+    width: 80%;
+    margin-left: 10%;
+    float: left;
+  }
+}
+
+#rightCol article {
+  width: 100%;
+  /*	background-color: rgba(255,255,255);*/
+  background-color: #14112d;
+  margin-bottom: 20px;
+  float: left;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#rightCol article:last-child {
+  margin-bottom: 0;
+}
+
+#rightCol article img {
+  width: 94%;
+  margin: 3%;
+  float: left;
+  margin-bottom: 10px;
+}
+
+#rightCol article p {
+  font-size: 1em;
+  font-family: Times New Roman, sans-serif;
+  /*	color: #3e3e3f;*/
+  color: #7c7c7c;
+  width: 86%;
+  float: left;
+  margin: 10px;
+}
+
+#rightCol article a {
+  color: #6accd7;
+  font-size: 1.2em;
+}
+
+#rightCol article a:hover {
+  color: #647f82;
+}
+
+#rightCol article span {
+  float: center;
+  margin: 3%;
+  /*	color: #7c7c7c;*/
+  color: #acacb7;
+  margin-bottom: 10px;
+}
+
+/* для копирования кошелька и публичного ключа*/
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  /* visibility: hidden;*/
+  width: 140px;
+  background-color: #555;
+  /*color: #fff;*/
+  color: #7c7c7c;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltip input {
+  background-color: #14112d;
+  color: #7c7c7c;
+  width: 90%;
+  border-width: 0;
+}
+
+/* -------------------------------
+		Футер сайта
+----------------------------------*/
+
+footer {
+  width: 98%;
+  float: left;
+  padding: 0.8% 1%;
+  margin-top: 20px;
+  background-color: #14112d;
+  margin-bottom: -20px;
+}
+
+footer div#rights {
+  float: left;
+  font-family: "mr_InsulaG";
+  color: white;
+  width: 55%;
+  margin-left: 5%;
+  line-height: 35px;
+}
+
+footer div#social {
+  float: right;
+  width: 35%;
+  margin-right: 5%;
+}
+
+footer #social a {
+  width: 35px;
+  float: right;
+}
+
+footer div#social img {
+  margin-right: 2%;
+  width: 100%;
 }
 
