--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -1,107 +1,92 @@
 header {
 	background-color: $dark-color;
-	#logo {
+	#logo a {
 		text-shadow: 2px 2px 4px red, -2px 2px 4px red, 2px -2px 4px red, -2px -2px 4px red;
 		/*font-family: Times New Roman, sans-serif;*/
 		color: $line-color;
 		float: left;
-		width: 25%;
+		width: 100%;
 		padding-top: 10px;
+	}
+	#lk_menu {		
+		line-height: 15px;
+		#contact, .lk_topmenu_li a label#client {
+			margin-top: -20px;
+		}
+		#contact a, .lk_topmenu {
+			margin: -10px 0 5px 10px;
+		}
+		#contact a {
+			text-shadow: 1px 1px 2px #e0e0e0, 0 0 2em white;
+			color: $violet;
+			float: right;
+			font-size: 1.4em;
+		}
+		#contact a:hover {
+			color: #e0e0e0;
+		}
 	}
 }
 
-
-
-#lk_menu span#contact a, .lk_topmenu {
-	margin: -10px 0px 5px 10px;
-}
-
 @media (min-width: 1300px) {
-header a#logo {
-	font-size: 2.5em;
-	margin: 8px 10px 7px 15%;
+	header {
+		#logo a {
+			font-size: 2.5em;
+			margin: 8px 10px 7px 15%;
+		}
+		#lk_menu {
+			#contact a, .lk_topmenu {	
+				margin-right: 15%;
+			}
+		}
+	}
 }
-#lk_menu span#contact a, .lk_topmenu {	
-	margin-right: 15%;
-}}
 @media (max-width: 1299px) {
-header a#logo {
-	font-size: 2em;
-	margin: 8px 10px 7px 7%;
-}
-
-
-
-
-
-#lk_menu span#contact a, .lk_topmenu {	
-	margin-right: 7%;
-}}
-
-#lk_menu span#contact a {
-	text-shadow: 1px 1px 2px #e0e0e0, 0 0 2em white;
-	color: rgba(76,0,164);
-	float: right;
-	font-size: 1.4em;
-}
-
-#lk_menu span#contact a:hover {
-	color: #e0e0e0;
-}
-
-#lk_menu {
-	background-color: rgba(20,17,45);	
-	margin-top: -1px;
-}
-
-#lk_menu span#contact, .lk_topmenu_li a label#client {
-	margin-top: -20px;
+	header {
+		#logo a {
+			font-size: 2em;
+			margin: 8px 10px 7px 7%;
+		}
+		#lk_menu {
+			#contact a, .lk_topmenu {	
+				margin-right: 7%;
+			}
+		}
+	}
 }
 
 .lk_topmenu {
 	font-size: 1.2em;
 }
-.lk_submenu {
-	list-style: none; 
+.lk_submenu {	
 	margin: 0;
-	padding: 10px 20px;
-	
+	padding: 10px 20px;	
 	position: absolute;
 	top: 100%;
 	right: 0;
 	z-index: 10;
-	-webkit-transition: 0.5s ease-in-out;
-	-moz-transition: 0.5s ease-in-out;
-	-o-transition: 0.5s ease-in-out;
-	transition: 0.5s ease-in-out;
-	
+	@include transition(0.5s ease-in-out);
 	display: none;
-	background: rgba(230,230,230);
+	background: $beige;
 	border: 1px solid #8c8c8c;		
 	border-radius: 5px;	
 }
 .lk_topmenu_li {
 	display: inline-block;
-	/*float: right;*/
 	position: relative;
 	padding: 0;
 }
 .lk_topmenu a {
 	display: block;
-	text-decoration: none;
-	outline: none;
-	transition: .5s linear;
-	
+	@include transition(0.5s linear);
 }
 
 .lk_submenu li a {
 	border: 1px solid green;
-	border-radius: 5px;	
-	/*color: #8c8c8c;*/
+	border-radius: 5px;
 	color: green;
 	margin: 7px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding: 10px 0;
 	float: left;
 	width: 150px;
 	text-align: center;
@@ -120,7 +105,7 @@ header a#logo {
 	color: white;	
 	border: 4px double white;
 	border-radius: 5px;	
-	padding: 5px 10px 5px 10px;
+	padding: 5px 10px;
 	margin-bottom: 5px;
 }
 
@@ -131,138 +116,3 @@ header a#logo {
 	box-shadow: 0 0 20px red;
 	cursor: pointer;
 }
-
-
-@media (max-width: 699px) {
-nav {
-	width: 90%;
-	float: left;
-	background-color: #ffffff;
-	padding: 0 5% 0.7% 5%;
-}}
-@media (max-width: 1299px) and (min-width: 700px) {
-nav {
-	width: 86%;
-	float: left;
-	background-color: #ffffff;
-	padding: 0 7% 0.7% 7%;
-}}
-@media (min-width: 1300px) {
-nav {
-	width: 70%;
-	float: left;
-	background-color: #ffffff;
-	padding: 0 15% 0.7% 15%;
-}}
-
-
-@media (min-width: 837px){
-nav a, nav#fixed a {
-	border-top: 5px solid rgba(255,255,255,0);
-}}
-
-nav a, nav#fixed a {	
-	padding: 0.5% 1% 0 1%;
-	float: left;
-	font-family: Times New Roman, sans-serif;
-	font-size: 1.4em;
-	color: #686869;
-}
-
-nav#fixed {
-	position: fixed;
-	top: 0;
-	background-color: rgba(255,255,255,0.87);
-	border-color: rgba(224,224,224,0.87);
-
-	@include transition(all 0.6s ease);
-	
-}
-
-nav#fixed:hover {
-	background-color: #fff;
-}
-
-nav a:hover, nav#fixed a:hover {
-	border-top: 5px solid rgba(255,235,59);
-	color: #8c8c8c;
-}
-
-
-@media (max-width: 699px){
-.line-menu {
-	display: none;
-}}
-@media (min-width: 700px){
-.topmenu {
-	display: none;
-}}
-.line-menu a {
-	width: calc(90% / 5);
-	text-align: center;
-}
-
-.submenu {
-	list-style: none;   
-	margin: 0;
-	padding: 20px;
-	  
-	position: absolute;
-	top: 100%;
-	left: 0;
-	z-index: 10;
-	-webkit-transition: 0.5s ease-in-out;
-	-moz-transition: 0.5s ease-in-out;
-	-o-transition: 0.5s ease-in-out;
-	transition: 0.5s ease-in-out;
-	
-	display: none;
-	/*background: white;*/
-	background: rgba(230,230,230);
-	border: 1px solid #8c8c8c;
-	border-radius: 5px;
-}
-.topmenu_li {
-	display: inline-block;
-	margin-right: 20px;
-	/*float: left;*/
-	position: relative;
-}
-.topmenu_li:last-child {
-  margin-right: 0;
-}
-.topmenu a {
-	display: block;
-	padding: 10px 0;
-	text-decoration: none;
-	outline: none;
-	transition: .5s linear;
-}
-
-.submenu li a {
-	border: 1px solid blue;
-	border-radius: 5px;
-	padding: 10px 15px;
-	/*color: #8c8c8c;	*/
-	color: blue;
-	margin: 5px;
-	float: left;
-}
-
-.topmenu_li:hover .submenu {
-  display: block;
-}
-.fa {
-  font-family: "FontAwesome";
-  color: inherit;
-  padding-left: 10px;
-}
-
-
-#slideMenu {
-	float: left;
-	color: rgba(255,255,255,0);
-
-	@include select(none);
-}
-
