--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,5 @@
+/* Тесты */
+
 $secondary-color: #f5f5f5;
 $third-color: #f9f9f9;
 
@@ -39,9 +41,12 @@ p {
 
 $font-stack: 'Nunito', sans-serif;
 
+/* Цвета */
 $main-color: rgba(172,172,183);
 $dark-color:rgba(20,17,45);
 $line-color: rgba(255,235,59);
+$violet:  rgba(76,0,164);
+$beige: rgba(230,230,230);
 
 @mixin transition($property) {
 	-webkit-transition: $property;
@@ -82,8 +87,7 @@ textarea {
 
 body {
 	width: 100%;
-	min-height: 100vh;
-	float: left;
+	min-height: 100vh;	
 	font-family: $font-stack;
 	background-color: $main-color; 	
 	@include display(flex);
@@ -94,8 +98,7 @@ body {
 	/* ----------------------- */
 }
 
-#wrapper {
-	float: left;
+#wrapper {	
 	flex-grow: 1;	
 }
 
@@ -124,6 +127,17 @@ body {
 		Шапка сайта
 ----------------------------------*/
 @import 'header';
+
+
+/* -------------------------------
+			Меню
+----------------------------------*/
+@import 'menu';
+
+
+#slideMenu {
+	@include select(none);
+}
 
 	
 /* --------------------------------
