--- a/resources/sass/_topside.scss
+++ b/resources/sass/_topside.scss
@@ -1,36 +1,31 @@
+%repeat-style-topCol {
+	background-color: $dark-color;
+	float: left;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
 
+#topColPhoto {
+	@extend %repeat-style-topCol;
+	margin: 0 20px 20px 0;
+}
+
+#topColPhoto img {
+	width: 100%;
+	float: left;
+}
 	
-	#topColPhoto {
-	/*	background-color: rgba(255,255,255);*/
-		background-color: rgba(20,17,45);
-		margin-right: 20px;
-		margin-bottom: 20px;
-		float: left;
-		box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-	}
-	#topColPhoto img {
-		width: 100%;
-		float: left;
-	}
+#topColText {
+	@extend %repeat-style-topCol;
+	border-radius: 5px;
+	margin-bottom: 20px;
+}
+
+#topColText  h1 {	
+	color: white;	
+	text-shadow: 1px 1px 2px grey, 0 0 3em #ececee;
+}
 	
-	#topColText {
-	/*	background-color: rgba(255,255,255);*/
-		background-color: rgba(20,17,45);
-		border-radius: 5px;	
-		box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-		float: left;
-		margin-bottom: 20px;	
-	}
-	#topColText  h1 {	
-	/*	font-family: 'RussianSuvenir';	*/
-	/*	color: blue;*/ /*rgba(121,50,218);*/
-		color: rgba(255,255,255);
-		width: 100%;
-		text-align: center;	
-		text-shadow: 1px 1px 2px grey, 0 0 3em #ececee;
-	}
-	
-	@media (min-width: 1300px) {
+@media (min-width: 1300px) {
 	#topColPhoto {
 		width: 200px;
 	}
@@ -41,9 +36,10 @@
 	#topColText  h1 {	
 		font-size: 3em;	
 		margin-top: 76px;
-	}}
+	}
+}
 	
-	@media (max-width: 1299px)  and (min-width: 1000px) {
+@media (max-width: 1299px)  and (min-width: 1000px) {
 	#topColPhoto {
 		width: 180px;
 	}
@@ -54,9 +50,10 @@
 	#topColText  h1 {	
 		font-size: 2.5em;	
 		margin-top: 71px;
-	}}
+	}
+}
 	
-	@media (max-width: 999px)  and (min-width: 800px) {
+@media (max-width: 999px)  and (min-width: 800px) {
 	#topColPhoto {
 		width: 160px;
 	}
@@ -67,9 +64,10 @@
 	#topColText  h1 {	
 		font-size: 2em;
 		margin-top: 60px;
-	}}
+	}
+}
 	
-	@media (max-width: 799px) and (min-width: 700px) {
+@media (max-width: 799px) and (min-width: 700px) {
 	#topColPhoto {
 		width: 140px;
 	}
@@ -80,9 +78,10 @@
 	#topColText  h1 {	
 		font-size: 1.8em;
 		margin-top: 53px;
-	}}
+	}
+}
 	
-	@media (max-width: 699px) and (min-width: 600px) {
+@media (max-width: 699px) and (min-width: 600px) {
 	#topColPhoto {
 		width: 120px;
 	}
@@ -93,9 +92,10 @@
 	#topColText  h1 {	
 		font-size: 1.7em;
 		margin-top: 45px;
-	}}
+	}
+}
 	
-	@media (max-width: 599px) and (min-width: 540px) {
+@media (max-width: 599px) and (min-width: 540px) {
 	#topColPhoto {
 		width: 100px;
 	}
@@ -106,9 +106,10 @@
 	#topColText  h1 {	
 		font-size: 1.6em;
 		margin-top: 40px;
-	}}
+	}
+}
 	
-	@media (max-width: 539px) and (min-width: 490px) {
+@media (max-width: 539px) and (min-width: 490px) {
 	#topColPhoto {
 		width: 100px;
 	}
@@ -119,9 +120,10 @@
 	#topColText  h1 {	
 		font-size: 1.4em;
 		margin-top: 38px;
-	}}
+	}
+}
 	
-	@media (max-width: 489px) and (min-width: 440px) {
+@media (max-width: 489px) and (min-width: 440px) {
 	#topColPhoto {
 		width: 80px;
 	}
@@ -132,9 +134,10 @@
 	#topColText  h1 {	
 		font-size: 1.3em;
 		margin-top: 30px;
-	}}
+	}
+}
 	
-	@media (max-width: 439px) and (min-width: 390px) {
+@media (max-width: 439px) and (min-width: 390px) {
 	#topColPhoto {
 		width: 70px;
 	}
@@ -145,9 +148,10 @@
 	#topColText  h1 {	
 		font-size: 1.1em;
 		margin-top: 25px;
-	}}
+	}
+}
 	
-	@media (max-width: 389px) and (min-width: 340px) {
+@media (max-width: 389px) and (min-width: 340px) {
 	#topColPhoto {
 		width: 60px;
 	}
@@ -158,9 +162,10 @@
 	#topColText  h1 {	
 		font-size: 1em;
 		margin-top: 22px;
-	}}
+	}
+}
 	
-	@media (max-width: 339px) and (min-width: 300px) {
+@media (max-width: 339px) and (min-width: 300px) {
 	#topColPhoto {
 		width: 50px;
 	}
@@ -171,9 +176,10 @@
 	#topColText  h1 {	
 		font-size: 0.8em;
 		margin-top: 20px;
-	}}
+	}
+}
 	
-	@media (max-width: 299px) {
+@media (max-width: 299px) {
 	#topColPhoto {
 		width: 45px;
 	}
@@ -184,5 +190,5 @@
 	#topColText  h1 {	
 		font-size: 0.6em;
 		margin-top: 18px;
-	}}
-	
+	}
+}	
