--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -3,7 +3,7 @@ header {
 	#logo a {
 		text-shadow: 2px 2px 4px red, -2px 2px 4px red, 2px -2px 4px red, -2px -2px 4px red;
 		/*font-family: Times New Roman, sans-serif;*/
-		color: $line-color;
+		color: $yellow;
 		float: left;
 		
 		padding-top: 10px;
