--- a/resources/sass/_content.scss
+++ b/resources/sass/_content.scss
@@ -1,55 +1,46 @@
-
 #leftCol {
-	background-color: rgba(172,172,183); 
-}
-
-#leftCol #form_nazad {
-	width: 40%;
-}
-#leftCol #form_dalee {
-	width: 40%;
-}
-
-#support div, #o_prizmarket div{
-	width: 90%;
-	margin: 5%;
 	float: left;
 }
-#support h1 b, #o_prizmarket h1 b{
-	color: blue;
-}
-#support h3 b{
-	color: green;
-}
-#o_prizmarket h3 b{
-	color: red;
+
+@media (max-width: 699px) {
+	#leftCol {
+		width: 100%;
+		margin-bottom: 20px;
+	}	
+}	
+
+@media (min-width: 700px) {
+	#leftCol {
+		width: 69%;
+		margin-right: 3%;
+	}
+	
 }
 
-.button {
-	padding: 3px 10px 3px 10px;
-	background-color: #ffe; 
-    color: #930; 
+#leftCol article {	
+	float: left;
+	background-color: $dark-color;
+	color: $beige;
+	padding: 20px;	
+	margin-bottom: 20px;
+	border-radius: 5px;	
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
-.button:hover {
-	background-color: grey; 
-    color: white; 
-	border: 2px solid #f8d881;
-	cursor: pointer;
+#leftCol article:last-child {margin-bottom: 0}
+
+#leftCol article img {
+	width: 100%;
+	float: left;
+	margin-bottom: 10px;
 }
 
-#leftCol article h4 {
-	text-align: center;
-	color: rgba(172,172,183); 
-	font-size: 1.2em;
-	font-family: Times New Roman, sans-serif;
-	width: 86%;
-	margin: 2% 7%;
-}
-#leftCol p label {
+#leftCol article a {
+	color: $yellow;
 	font-size: 1.2em;
 }
-#leftCol article {
-	padding-bottom: 20px;
+
+#leftCol article a:hover {
+	color: #647f82
 }
 
 #warning {
@@ -58,31 +49,8 @@
 }
 
 
-@media (min-width: 700px) {
-#wrapper #leftCol {
-	width: 69%;
-	margin-right: 3%;
-	float: left;
-}}
 
-@media (max-width: 699px) {
-#wrapper #leftCol {
-	width: 100%;
-	float: left;
-	margin-bottom: 20px;
-}}
-
-#leftCol article {
-	width: 100%;
-	background-color: rgba(20,17,45);
-	margin-bottom: 20px;
-	float: left;
-	border-radius: 5px;	
-	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-
-#leftCol article:last-child {margin-bottom: 0}
-
+/* ЭТО то что ниже НАДО ДОРАБОТАТЬ!!! */
 
 /*----------------------------------*/
 /* В личном кабинете заявки клиента */
@@ -126,39 +94,13 @@
 /*----------------------------------*/
 
 
-#leftCol article img {
-	width: 100%;
-	float: left;
-	margin-bottom: 10px;
+#leftCol #form_nazad {
+	width: 40%;
+}
+#leftCol #form_dalee {
+	width: 40%;
 }
 
-#leftCol article h2 {
-	font-size: 1em;
-	color: rgba(172,172,183); 
-	width: 90%;
-	margin-left: 5%;
-	float: left;
-}
+/* -------------------------------*/
 
-#leftCol article p {
-	font-size: 1em;
-	font-family: Times New Roman, sans-serif;
-	color: rgba(172,172,183); 
-	width: 86%;
-	margin: 2% 7%;
-	float: left;
-}
-
-#leftCol article a {
-	color: rgba(255,235,59);
-	font-size: 1.2em;
-}
-#leftCol article h4 a {
-	font-size: 1em;
-}
-#leftCol article a:hover {color: #647f82}
-
-#leftCol article span {
-	float: right;
-	color: #7c7c7c;
-}
+/* -------------------------------*/
