--- a/resources/sass/_footer.scss
+++ b/resources/sass/_footer.scss
@@ -3,13 +3,11 @@ footer {
 	float: left;
 	padding: 0.8% 1%;
 	margin-top: 20px;
-	background-color: rgba(20,17,45);
-	margin-bottom: -20px;
+	background-color: $dark-color;
 }
 
 footer div#rights {
 	float: left;
-	font-family: 'mr_InsulaG';
 	color: white;
 	width: 55%;
 	margin-left: 5%;
