--- a/public/css/app.css
+++ b/public/css/app.css
@@ -307,8 +307,7 @@ nav {
   }
 }
 
-nav a,
-nav#fixed a {
+nav a {
   float: left;
   font-size: 1.4em;
   color: #686869;
@@ -316,6 +315,7 @@ nav#fixed a {
 }
 
 nav#fixed {
+  z-index: 2;
   position: fixed;
   top: 0;
   background-color: rgba(255, 255, 255, 0.87);
@@ -350,48 +350,6 @@ nav#fixed a:hover {
   text-align: center;
 }
 
-.submenu {
-  margin: 0;
-  padding: 20px;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 10;
-  transition: 0.5s ease-in-out;
-  display: none;
-  background: #e6e6e6;
-  border: 1px solid #8c8c8c;
-  border-radius: 5px;
-}
-
-.topmenu_li {
-  display: inline-block;
-  margin-right: 20px;
-  position: relative;
-}
-
-.topmenu_li:last-child {
-  margin-right: 0;
-}
-
-.topmenu a {
-  display: block;
-  transition: 0.5s linear;
-}
-
-.submenu li a {
-  border: 1px solid blue;
-  border-radius: 5px;
-  padding: 10px 15px;
-  color: blue;
-  margin: 5px;
-  float: left;
-}
-
-.topmenu_li:hover .submenu {
-  display: block;
-}
-
 .fa {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
@@ -408,6 +366,83 @@ nav#fixed a:hover {
 .fa-lg {
   font-size: 2em;
   vertical-align: -30%;
+}
+
+.fa-times:before {
+  content: "\F00D";
+}
+
+.sidebar {
+  position: fixed;
+  left: -250px;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  background: #14112d;
+  transition: all 0.5s ease;
+}
+
+.sidebar header {
+  font-size: 22px;
+  color: #e6e6e6;
+  text-align: center;
+  line-height: 70px;
+  background: #4c00a4;
+  /*#063146;*/
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.sidebar ul a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  line-height: 55px;
+  font-size: 20px;
+  color: #e6e6e6;
+  padding-left: 40px;
+  box-sizing: border-box;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 1px solid black;
+  transition: 0.4s;
+}
+
+.sidebar ul li:hover a {
+  padding-left: 50px;
+}
+
+#check {
+  display: none;
+}
+
+label #btn {
+  line-height: 1.3em;
+}
+
+label #cancel {
+  position: absolute;
+  cursor: pointer;
+  background: #e6e6e6;
+  border-radius: 3px;
+  z-index: 10;
+  left: -195px;
+  top: 17px;
+  font-size: 30px;
+  color: #4c00a4;
+  padding: 4px 9px;
+  transition: all 0.5s ease;
+}
+
+#check:checked ~ .sidebar {
+  left: 0;
+}
+
+#check:checked ~ label #cancel {
+  left: 195px;
+  position: fixed;
 }
 
 #slideMenu {
