--- a/resources/sass/_content.scss
+++ b/resources/sass/_content.scss
@@ -21,7 +21,7 @@
 	float: left;
 	background-color: $dark-color;
 	color: $beige;
-	padding: 20px;	
+	/*padding: 20px;*/
 	margin-bottom: 20px;
 	border-radius: 5px;	
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
