--- a/public/css/app.css
+++ b/public/css/app.css
@@ -703,7 +703,7 @@ label #cancel {
   float: left;
   background-color: #14112d;
   color: #e6e6e6;
-  padding: 20px;
+  /*padding: 20px;*/
   margin-bottom: 20px;
   border-radius: 5px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
