--- a/public/css/app.css
+++ b/public/css/app.css
@@ -733,6 +733,15 @@ label #cancel {
   text-align: center;
 }
 
+.date,
+.hesh {
+  float: right;
+}
+
+.hesh {
+  color: white;
+}
+
 /* ЭТО то что ниже НАДО ДОРАБОТАТЬ!!! */
 
 /*----------------------------------*/
