--- a/resources/sass/_content.scss
+++ b/resources/sass/_content.scss
@@ -48,6 +48,13 @@
 	text-align: center;
 }
 
+.date, .hesh {
+	float: right;
+}
+.hesh {
+	color: white;
+}
+
 
 
 /* ЭТО то что ниже НАДО ДОРАБОТАТЬ!!! */
