--- a/resources/scss/_content.scss
+++ b/resources/scss/_content.scss
@@ -68,7 +68,7 @@
 }
 #leftCol #lk_z #zayavki h4 {
 	font-family: Times New Roman, sans-serif;
-	color: rgba(172,172,183); 
+	color: rgb(172,172,183); 
 }
 #leftCol #lk_z #zayavki {
 	margin-bottom: 0px;
