--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,7 +34,7 @@ ul {
 }
 
 @font-face {
-  font-family: "FontAwesome";
+  font-family: 'FontAwesome';
   src: url("/fonts/font-awesome/fontawesome-webfont.eot?v=4.7.0");
   src: url("/fonts/font-awesome/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("/fonts/font-awesome/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("/fonts/font-awesome/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("/fonts/font-awesome/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("/fonts/font-awesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
   font-weight: normal;
@@ -458,8 +458,8 @@ label #cancel {
 		Верхняя часть контента
 -----------------------------------*/
 
-#topColText,
-#topColPhoto {
+#topColPhoto,
+#topColText {
   background-color: #14112d;
   float: left;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
