--- a/resources/scss/_content.scss
+++ b/resources/scss/_content.scss
@@ -55,6 +55,22 @@
 	color: white;
 }
 
+/* -------------------------------*/
+/* кнопки Далее и Назад, на главной странице*/
+/* -------------------------------*/
+
+#dalee, #nazad {
+	border-radius: 100px;
+	padding: 15px 25px;
+}
+#forms_button {
+	text-align: center;
+	padding: 20px 0;
+}
+
+
+
+
 
 
 /* ЭТО то что ниже НАДО ДОРАБОТАТЬ!!! */
@@ -101,13 +117,5 @@
 /*----------------------------------*/
 
 
-#leftCol #form_nazad {
-	width: 40%;
-}
-#leftCol #form_dalee {
-	width: 40%;
-}
-
 /* -------------------------------*/
 
-/* -------------------------------*/
